# trading-system

./: .dockerignore  .enhanced_evidence_monitor.json  .env.example  .evidence_pack_monitor.json  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  trading_system.db.c9_drill_backup
.cursor/: .cursorrules
.cursor/prompts/: module_task.md
.cursor/rules/: phase12-module-evidence.mdc
.cursor/skills/: WORKFLOW.skill.md  tv-module-dev-prompt.md
.cursor_tasks/: c3_audit_feedback_20260222.md  c3_audit_feedback_clear.md  c3_practical_audit_conclusion.md  c4_audit_checklist.md  cursor_c3_audit_response_20260222.md  cursor_status_query_221212.md
alembic/: env.py
alembic/versions/: 001_initial_schema_pr2.py  002_decision_order_map_pr6.py  003_decision_order_map_quantity_numeric.py  004_execution_events_pr8.py  005_execution_events_decision_created_index.py  (+21 more)
config/: README.md  alert_rules.example.yaml  config.example.yaml
docs/: API.md  DEPLOYMENT.md  Phase2.1_A1_证据包.md  Phase2.1_A5_证据包.md  Phase2.1_A7_证据包.md  Phase2.2_A1_证据包.md  Phase2.2_A2_证据包.md  Phase2.2_B3_证据包.md  Phase2.2_B4_证据包.md  Phase2.2_系统验收报告.md  Superpowers使用说明.md  TRADINGVIEW_WEBHOOK.md  tech_debt_registry.yaml
scripts/: c9_backup_restore.sh  c9_failure_recovery_drill.sh  c9_stress_test.py  check_tech_debt_gates.py  init_db.sh  phase10_seal_verify.sh  phase11_stress_d6_20runs.sh  phase12_a2_log_smoke_test.py  phase12_a3_perf_log_smoke_test.py  relay_tradingview_webhook.py  reset_circuit_breaker.py  run_execution_once.py  verify_migration_downgrade_gate.sh
tests/: conftest.py
(+415 files in other folders)
